@@ -2,7 +2,10 @@ package org.adempiere.ad.migration.logger;
 
 import com.google.common.base.MoreObjects;
 import de.metas.logging.LogManager;
+import de.metas.util.ILoggable;
+import de.metas.util.Loggables;
 import lombok.NonNull;
+import lombok.Setter;
 import org.adempiere.ad.trx.api.ITrx;
 import org.adempiere.ad.trx.spi.TrxOnCommitCollectorFactory;
 import org.adempiere.exceptions.AdempiereException;
@@ -21,6 +24,7 @@ import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
+import java.util.Optional;
 
 /*
  * #%L
@@ -48,17 +52,16 @@ import java.time.format.DateTimeFormatter;
  * SQL migration script file logger.
  *
  * @author metas-dev <dev@metasfresh.com>
- *
  */
-public class MigrationScriptFileLogger
+class MigrationScriptFileLogger
 {
-	public static MigrationScriptFileLogger of(final String dbType)
+	public static MigrationScriptFileLogger newForPostgresql()
 	{
-		return new MigrationScriptFileLogger(dbType);
+		return new MigrationScriptFileLogger("postgresql");
 	}
 
 	private static final Logger logger = LogManager.getLogger(MigrationScriptFileLogger.class);
-
+	@NonNull @Setter private ILoggable watcher = Loggables.console();
 	private static final Charset CHARSET = StandardCharsets.UTF_8;
 	private static final DateTimeFormatter FORMATTER_ScriptFilenameTimestamp = DateTimeFormatter.ofPattern("yyyy-MM-dd");
 
@@ -67,7 +70,7 @@ public class MigrationScriptFileLogger
 	@Nullable private static Path _migrationScriptsDirectory;
 
 	private static final String COLLECTOR_TRXPROPERTYNAME = MigrationScriptFileLogger.class.getName() + ".collectorFactory";
-	private final TrxOnCommitCollectorFactory<StringBuilder, Sql> collectorFactory = new TrxOnCommitCollectorFactory<StringBuilder, Sql>()
+	private final TrxOnCommitCollectorFactory<StringBuilder, Sql> collectorFactory = new TrxOnCommitCollectorFactory<>()
 	{
 
 		@Override
@@ -113,13 +116,14 @@ public class MigrationScriptFileLogger
 				return;
 			}
 
-			System.out.println("\n");
-			System.out.println("---------------------------------------------------------------------------");
-			System.out.println("Discarding following SQL statements, due to transaction rollback:\n");
-			System.out.println(sqlStatements);
-			System.out.println("---------------------------------------------------------------------------");
-			System.out.println("\n");
-			System.out.flush();
+			watcher.addLog("\n"
+					+ "---------------------------------------------------------------------------"
+					+ "Discarding following SQL statements, due to transaction rollback:\n"
+					+ sqlStatements
+					+ "---------------------------------------------------------------------------"
+					+ "\n"
+			);
+			watcher.flush();
 		}
 	};
 
@@ -158,12 +162,15 @@ public class MigrationScriptFileLogger
 		if (_path == null || !Files.exists(_path))
 		{
 			final Path path = createPath(dbType);
-			System.out.println("Using scripts path: " + path);
+			watcher.addLog("Using scripts path: " + path);
 
-			//
-			// Make sure the directories exist
 			try
 			{
+				final String fileHeader = "-- Run mode: " + Ini.getRunMode() + "\n\n";
+				Files.writeString(path, fileHeader, CHARSET, StandardOpenOption.CREATE, StandardOpenOption.APPEND);
+
+				//
+				// Make sure the directories exist
 				Files.createDirectories(path.getParent());
 			}
 			catch (final IOException ex)
@@ -176,11 +183,10 @@ public class MigrationScriptFileLogger
 		return _path;
 	}
 
+	public final Optional<Path> getFilePathIfPresent() {return Optional.ofNullable(getFilePathOrNull());}
+
 	@Nullable
-	public final synchronized Path getFilePathOrNull()
-	{
-		return _path;
-	}
+	private synchronized Path getFilePathOrNull() {return _path;}
 
 	public static Path getMigrationScriptDirectory()
 	{
@@ -210,6 +216,11 @@ public class MigrationScriptFileLogger
 		collectorFactory.collect(sqlStatement);
 	}
 
+	public synchronized void appendSqlStatements(@NonNull final SqlBatch sqlBatch)
+	{
+		sqlBatch.streamSqls().forEach(collectorFactory::collect);
+	}
+
 	private synchronized void appendNow(final String sqlStatements)
 	{
 		if (sqlStatements == null || sqlStatements.isEmpty())
@@ -220,12 +231,11 @@ public class MigrationScriptFileLogger
 		try
 		{
 			final Path path = getCreateFilePath();
-			final byte[] bytes = sqlStatements.getBytes(CHARSET);
-			Files.write(path, bytes, StandardOpenOption.CREATE, StandardOpenOption.APPEND);
+			Files.writeString(path, sqlStatements, CHARSET, StandardOpenOption.CREATE, StandardOpenOption.APPEND);
 		}
 		catch (final IOException ex)
 		{
-			logger.error("Failed writting to {}:\n {}", this, sqlStatements, ex);
+			logger.error("Failed writing to {}:\n {}", this, sqlStatements, ex);
 			close(); // better to close the file ... so, next time a new one will be created
 		}
 	}
@@ -237,7 +247,7 @@ public class MigrationScriptFileLogger
 	 */
 	public synchronized void close()
 	{
-		System.out.println("Closed migration script: " + _path);
+		watcher.addLog("Closed migration script: " + _path);
 		_path = null;
 	}
 }
